# kalgebra

./: CMakeLists.txt  TODO  manual.md  memo.md
src/: CMakeLists.txt  askname.h  consolehtml.cpp  consolehtml.h  consolemodel.cpp  consolemodel.h  control  dictionary.cpp  dictionary.h  functionedit.cpp  functionedit.h  http_message.cpp  http_message.h  http_server.cpp  http_server.h  kalgebra.cpp  kalgebra.h  main.cpp  uri.h  varedit.cpp  varedit.h  variablesdelegate.cpp  variablesdelegate.h  viewportwidget.cpp  viewportwidget.h
